@@ -28,6 +28,8 @@ gssdp_resource_group_set_max_age
 gssdp_resource_group_get_max_age
 gssdp_resource_group_set_available
 gssdp_resource_group_get_available
+gssdp_resource_group_set_message_delay
+gssdp_resource_group_get_message_delay
 gssdp_resource_group_add_resource
 gssdp_resource_group_add_resource_simple
 gssdp_resource_group_remove_resource
